Updated pyproject.toml to use dependency-groups.dev instead of the deprecated tool.uv.dev-dependencies. added hatchling section. moved .py file to src to conform to latest best practices, fixed entry point and simplified build config. update readme.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,14 @@ dependencies = [
 ]
 
 [project.scripts]
-backup-extractor = "backup_extractor:main"
+backup-extractor = "src.backup_extractor:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = []
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
+[dependency-groups]
+dev = []
