--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,7 @@ profile_default/
 ipython_config.py
 
 # pyenv
-.python-version
+# .python-version - NOT ignored: we commit this file for uv Python version pinning
 
 # pipenv
 Pipfile.lock
